[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/UI/ThemeMAIN.tres" type="Theme" id=1]
[ext_resource path="res://Resources/UI/PopUps/Scripts/ChangeNamePopUp.gd" type="Script" id=2]

[node name="ChangeName" type="WindowDialog" groups=["PopUps"]]
margin_left = 47.0
margin_right = 368.0
margin_bottom = 184.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
window_title = "Change Name"
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 321.0
margin_bottom = 184.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="NinePatchRect"]
margin_right = 320.0
margin_bottom = 184.0
rect_min_size = Vector2( 256, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameAcceptButton" type="Button" parent="NinePatchRect"]
margin_left = 32.0
margin_top = 120.0
margin_right = 110.0
margin_bottom = 150.0
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameCancelButton" type="Button" parent="NinePatchRect"]
margin_left = 216.0
margin_top = 120.0
margin_right = 290.0
margin_bottom = 150.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect"]
margin_left = 9.0
margin_top = 16.0
margin_right = 185.0
margin_bottom = 36.0
text = "Insert new name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeNameLine" type="LineEdit" parent="NinePatchRect"]
margin_left = 56.0
margin_top = 64.0
margin_right = 264.0
margin_bottom = 88.0
theme = ExtResource( 1 )
max_length = 10
placeholder_text = "Nameless"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/NameAcceptButton" to="." method="_on_NameAcceptButton_pressed"]
[connection signal="pressed" from="NinePatchRect/NameCancelButton" to="." method="_on_NameCancelButton_pressed"]
